doc/Grammar_updated.txt


Grammar for ULP (Un-natural language programming language)


<program> ::= <program_item> | <program_item> <program>
<program_item> ::= <block> | <subprogram_definition> | <declaration>
<block> ::= ":" <statement_list>
<statement_list> ::= <statement> "." | <statement> "," <block>
<declaration> ::= <declaration> | <statement>
<declaration> ::= <global_definition>
<global_definition> ::= "let" "global" <type> <identifier> "be" "equal" "to" <expression>
<statement> ::= <assignment> | <selection_statement> | <looping_statement> | <print_statement> | <expression>

---------------
<assignment> ::= "let" <type> " " <identifier> "be" "equal" "to" <expression> | <reassignment>
<reassignment> ::= "set" <identifier> "to" <expression>
<type> ::= "Whole" "Number" | "Real" "Number" | "String" | "Boolean"
<identifier> ::= <letter> | <letter> <identifier>
<letter> ::= [a-zA-Z]
----------------
<expression> ::= <primary_expression> | <arithmetic_expression> | <logical_expression>
<primary_expression> ::= <literal> | <identifier> | <input_expression> | <subprogram_invocation_expression>
<literal> ::= <string_literal> | <number_literal> | <boolean_literal>
<number_literal> ::= <integer_literal> | <real_literal>
<integer_literal> ::= <digit> | <integer_literal>
<real_literal> ::= <integer_literal> "." <integer_literal>
<digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
<string_literal> ::= " <string_characters> "
<string_characters> ::= <empty> | <string_character> <string_characters>
<string_character> ::= [^"]
<boolean_literal> ::= "True" | "False"

<arithmetic_expression> ::= <arithmetic_term> | <add_expression>| <subtract_expression> | <multiply_expression> | <divide_expression>
<arithmetic_term> ::= <number_literal> | <identifier> #### Subprogram invocation later???
<add_expression> ::= "add" <arithmetic_expression> "to" <arithmetic_expression>
<subtract_expression> ::= "remove" <arithmetic_expression> "from" <arithmetic_expression>
<multiply_expression> ::= "multiply" <arithmetic_expression> "by" <arithmetic_expression>
<divide_expression> ::= "divide" <arithmetic_expression> "by" <arithmetic_expression>

<logical_expression> ::= <logical_expression> "and" <logical_expression> | <logical_expression> "or" <logical expression> | <logic_term>
<logic_term> ::= "is" (<boolean_literal> | <comparison_expression> | <not_expression>)
<not_expression> ::= "not" <logical_expression>
<comparison_expression> ::= <arithmetic_expression> <comparison_criteria> <arithmetic_expression>

<subprogram_invocation_expression> ::= "Invoke " <subprogram_name> " with " <argument_list>
<argument_list> ::= <empty> | <expression_list>
<empty> ::= ε
<expression_list> ::= <expression> ";" | <expression> "," <expression_list>

<input_expression> ::= "input" "from" "user"

------------------
<comparison_criteria> ::= ("less" "than" | "less" "than" "or" "equal" "to" | "more" "than" | "more" "than" "or" "equal" "to" | "equal" "to")
------------------
<selection_statement> ::= "check" <logical_expression> "," "then" <block> "otherwise" <block>
-----------------
<looping_statement> ::= "repeat" "until" <logical_expression> <block>
<break> ::= "break"
-----------------
<subprogram_definition> ::= "Description" "of" "subprogram" "called" <subprogram_name> "acting" "on" "inputs" <input_list> "producing" "outputs" <subprogram_output> <block>
<subprogram_name> ::= <identifier>
<input_list> ::= <empty> | <parameter_list>
<parameter_list> ::= <parameter> | <parameter> "," <parameter_list>
<parameter> ::= <type> " " <identifier>
<subprogram_output> ::= <type> " " <identifier>
--------------
<print_statement> ::= "Display" "result" <expression>
----------------
